sfSandBoxCode/force-app/main/default/objects/Laptop__c/Laptop__c.object-meta.xml
<CustomObject>
    <label>Laptop</label>
    <nameField>
        <displayFormat>LP-{0000000}</displayFormat>
        <label>Laptop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Laptops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>