sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/Accessories__c.field-meta.xml
<CustomField>
    <fullName>Accessories__c</fullName>
    <description>Accessories issued with the Laptop</description>
    <inlineHelpText>Select the accessories issued with the laptop</inlineHelpText>
    <label>Accessories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Modem</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Laptop Bag</fullName>
            </value>
            <value>
                <fullName>Power Cord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>