sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/Approved_Status_2__c.field-meta.xml
<CustomField>
    <fullName>Approved_Status_2__c</fullName>
    <label>Approved Status 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>