sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_1__c</fullName>
    <formula>$User.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver 1</label>
    <type>Text</type>
</CustomField>