sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/Asset_Cost__c.field-meta.xml
<CustomField>
    <fullName>Asset_Cost__c</fullName>
    <description>Cost of Laptop</description>
    <inlineHelpText>How much does the Laptop cost?</inlineHelpText>
    <label>Asset Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>