sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Person to whom the Laptop is assigned</description>
    <inlineHelpText>Who has been assigned this Laptop?</inlineHelpText>
    <label>Assignee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Laptops</relationshipLabel>
    <relationshipName>Laptops</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>