sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/Basic_Software_Installed__c.field-meta.xml
<CustomField>
    <fullName>Basic_Software_Installed__c</fullName>
    <label>Basic Software Installed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chrome</fullName>
            </value>
            <value>
                <fullName>Adobe Reader</fullName>
            </value>
            <value>
                <fullName>DropBox</fullName>
            </value>
            <value>
                <fullName>AntiVirus</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>