sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/CPU__c.field-meta.xml
<CustomField>
    <fullName>CPU__c</fullName>
    <description>CPU Capacity</description>
    <inlineHelpText>What&#39;s the Laptops CPU Capacity</inlineHelpText>
    <label>CPU</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>