sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The Date the Laptop was assigned</description>
    <inlineHelpText>Choose the Date the Laptop was assigned</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>