sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/Hard_Drive__c.field-meta.xml
<CustomField>
    <fullName>Hard_Drive__c</fullName>
    <description>Hard Drive size</description>
    <inlineHelpText>What&#39;s the size of the Hard Drive?</inlineHelpText>
    <label>Hard Drive</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>