sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Status__c</fullName>
    <description>Insurance status of the Laptop</description>
    <inlineHelpText>Is the Laptop Insured?</inlineHelpText>
    <label>Insurance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insured</fullName>
            </value>
            <value>
                <fullName>Un-Insured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>