sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Job Title of the Laptop Holder</description>
    <inlineHelpText>Whats the Job Title of the Person assigned the Laptop</inlineHelpText>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Managing Director - Fresh Life</fullName>
            </value>
            <value>
                <fullName>Managing Director - Sanergy</fullName>
            </value>
            <value>
                <fullName>Managing Director - Shared Services</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Operations Manager</fullName>
            </value>
            <value>
                <fullName>Byproducts Development Engineer</fullName>
            </value>
            <value>
                <fullName>Engineering Operations Manager</fullName>
            </value>
            <value>
                <fullName>Finance Manager</fullName>
            </value>
            <value>
                <fullName>Human Resource Manager</fullName>
            </value>
            <value>
                <fullName>Information Systems Manager</fullName>
            </value>
            <value>
                <fullName>Product Development Manager</fullName>
            </value>
            <value>
                <fullName>Communications Manager</fullName>
            </value>
            <value>
                <fullName>Government Relations Manager</fullName>
            </value>
            <value>
                <fullName>Grants Manager</fullName>
            </value>
            <value>
                <fullName>Insight and Innovations Manager</fullName>
            </value>
            <value>
                <fullName>Logistics &amp; Processing Manager</fullName>
            </value>
            <value>
                <fullName>Logistics Assistant Manager</fullName>
            </value>
            <value>
                <fullName>Manufacturing Manager</fullName>
            </value>
            <value>
                <fullName>Processing Assistant Manager</fullName>
            </value>
            <value>
                <fullName>Warehouse Officer</fullName>
            </value>
            <value>
                <fullName>Area Manager</fullName>
            </value>
            <value>
                <fullName>Operations Data Clerk</fullName>
            </value>
            <value>
                <fullName>Engineering Data Clerk</fullName>
            </value>
            <value>
                <fullName>Field Officers</fullName>
            </value>
            <value>
                <fullName>Human Resources Officer</fullName>
            </value>
            <value>
                <fullName>Human Resources Assistant</fullName>
            </value>
            <value>
                <fullName>Communications Officer</fullName>
            </value>
            <value>
                <fullName>Junior Associate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>