sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Model of the Laptop</description>
    <inlineHelpText>Whats the Model of the Laptop</inlineHelpText>
    <label>Model</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>