sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <description>Operating System of the Laptop</description>
    <inlineHelpText>What&#39;s the Laptops OS?</inlineHelpText>
    <label>Operating System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows 8</fullName>
            </value>
            <value>
                <fullName>Windows 7 Home Premium</fullName>
            </value>
            <value>
                <fullName>Windows 7 Professional</fullName>
            </value>
            <value>
                <fullName>Mac OS X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>