sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/RAM__c.field-meta.xml
<CustomField>
    <fullName>RAM__c</fullName>
    <description>RAM Capacity</description>
    <inlineHelpText>What&#39;s the size of the RAM</inlineHelpText>
    <label>RAM</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>