sfSandBoxCode/force-app/main/default/objects/Laptop__c/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <description>Serial Number of the Laptop</description>
    <inlineHelpText>Whats the Laptop&#39;s Serial No.</inlineHelpText>
    <label>Serial No</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>