sfSandBoxCode/force-app/main/default/objects/Laptop__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Assignee__c</columns>
    <columns>Date__c</columns>
    <columns>Make__c</columns>
    <columns>Condition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>